--- a/Andares_hotel.ipynb
+++ b/Andares_hotel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAPVyUw0/u3lq6yM3fq5c+",
+      "authorship_tag": "ABX9TyN6KyWkMixWqDOzeOSbs/iQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4McjVPeazPRF",
-        "outputId": "a1f04eb4-42e9-49c7-b1fd-1c9ae9d266b4"
+        "outputId": "cd67bacd-6e60-45f7-a90e-f380bf83f068"
       },
       "outputs": [
         {
@@ -60,21 +60,46 @@
             "3\n",
             "2\n",
             "1\n",
-            "Cloning into 'TalentoCloud'...\n",
-            "remote: Enumerating objects: 3, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
-            "remote: Total 3 (delta 0), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (3/3), done.\n"
+            "20\n",
+            "19\n",
+            "18\n",
+            "17\n",
+            "16\n",
+            "15\n",
+            "14\n",
+            "12\n",
+            "11\n",
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "fatal: destination path 'TalentoCloud' already exists and is not an empty directory.\n"
           ]
         }
       ],
       "source": [
+        "#usando laço for\n",
+        "\n",
         "for i in range(20, 0, -1):\n",
         "    if i != 13:\n",
         "        print(i)\n",
         "\n",
-        "!git clone https://github.com/PatthyPotter/TalentoCloud"
+        "#usando while\n",
+        "\n",
+        "andar = 20\n",
+        "while andar > 0:\n",
+        "    if andar != 13:\n",
+        "        print(andar)\n",
+        "    andar -= 1\n",
+        "\n",
+        "\n",
+        "#!git clone https://github.com/PatthyPotter/TalentoCloud"
       ]
     }
   ]
