--- a/desconto.ipynb
+++ b/desconto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBY+mBGn0XyRUbAW/wkRp1",
+      "authorship_tag": "ABX9TyPC+Z5M8/vyTtfQufvgE3jz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#Crie uma função que receba dois valores, o primeiro será o valor de um produto, o segundo a porcentagem de desconto.\n",
+        "#A função deverá aplicar o desconto ao valor do produto e retornar o valor final.\n",
+        "\n",
         "def desconto_percentual():\n",
         "    valor_produto = float(input(\"Digite o valor do produto: \"))\n",
         "    percentual_desconto = float(input(\"Digite o percentual de desconto: \"))\n",
@@ -48,24 +51,10 @@
         "desconto_percentual()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hp5GSufc6u0C",
-        "outputId": "51297a8c-0582-4c3e-b6c1-a6dda7f895f4"
+        "id": "hp5GSufc6u0C"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite o valor do produto: 1000\n",
-            "Digite o percentual de desconto: 10\n",
-            "O valor do produto com desconto é:  900.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
